# mar_trust

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
.github/: pull_request_template.md
.github/workflows/: README.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: health.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py
apps/api/app/repositories/: __init__.py
apps/api/app/schemas/: __init__.py
apps/api/app/services/: __init__.py
apps/api/app/utils/: __init__.py
apps/api/tests/: test_health.py
apps/web/: README.md  eslint.config.js  index.html  package.json  tailwind.config.ts
apps/web/src/app/: App.tsx  router.tsx
apps/web/src/app/providers/: AppProviders.tsx
apps/web/src/components/auth/: AuthShell.tsx  RoleSelector.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: useAuth.ts
apps/web/src/layouts/: DashboardLayout.tsx  PublicLayout.tsx
apps/web/src/pages/: HomePage.tsx  NotFoundPage.tsx
apps/web/src/pages/client/: ClientDashboardPage.tsx
apps/web/src/pages/public/: AboutPage.tsx  HomePage.tsx  HowItWorksPage.tsx  (+2 more)
apps/web/src/routes/: ProtectedRoute.tsx  router.tsx
apps/web/src/types/: auth.ts
docs/: CONTRIBUTING.md  DEPLOYMENT.md  FRONTEND_NAVIGATION.md  ROADMAP.md
docs/adr/: 0001-monorepo-structure.md
infra/: README.md
(+7 files in other folders)
